# libsharp

./: COMPILE  Makefile.am  configure.ac
libsharp2/: sharp.cc  sharp_core_inc.c  sharp_core_inc.cc  sharp_geomhelpers.cc  sharp_mpi.c  sharp_utils.h  sharp_vecsupport.h
test/: sharp2_testsuite.c  sharp2_testsuite.cc
